NEXT-2758 - fix footer collapse

--- a/src/Storefront/Resources/asset/scss/layout/_footer.scss
+++ b/src/Storefront/Resources/asset/scss/layout/_footer.scss
@@ -53,6 +53,7 @@
             color: $gray-600;
             float: right;
             font-size: 12px;
+            pointer-events: none;
         }
 
         .fa-plus {
